14 March 2007: Wouter
	- hash table insert (and subroutines) and lookup implemented.
	- hash table remove.

13 March 2007: Wouter
	- lock_unprotect in checklocks.
	- util/storage/lruhash.h for LRU hash table structure.

12 March 2007: Wouter
	- configure.ac moved to 0.2.
	- query_info and replymsg util/data structure.

9 March 2007: Wouter
	- added rwlock writelock checking.
	  So it will keep track of the writelock, and readlocks are enforced
	  to not change protected memory areas.
	- log_hex function to dump hex strings to the logfile.
	- checklocks zeroes its destroyed lock after checking memory areas.
	- unit test for alloc.
	- identifier for union in checklocks to please older compilers.
	- created 0.1 tag.

8 March 2007: Wouter
	- Reviewed checklock code.

7 March 2007: Wouter
	- created a wrapper around thread calls that performs some basic
	  checking for data race and deadlock, and basic performance 
	  contention measurement.

6 March 2007: Wouter
	- Testbed works with threading (different machines, different options).
	- alloc work, does the special type.

2 March 2007: Wouter
	- do not compile fork funcs unless needed. Otherwise will give
	  type errors as their typedefs have not been enabled.
	- log shows thread numbers much more nicely (and portably).
	- even on systems with nonthreadsafe libevent signal handling,
	  unbound will exit if given a signal.
	  Reloads will not work, and exit is not graceful.
	- start of alloc framework layout.

1 March 2007: Wouter
	- Signals, libevent and threads work well, with libevent patch and
	  changes to code (close after event_del).
	- set ipc pipes nonblocking.

27 February 2007: Wouter
	- ub_thread_join portable definition.
	- forking is used if no threading is available.
	  Tested, it works, since pipes work across processes as well.
	  Thread_join is replaced with waitpid. 
	- During reloads the daemon will temporarily handle signals,
	  so that they do not result in problems.