@@ -1,6 +1,7 @@
 14 March 2007: Wouter
 	- hash table insert (and subroutines) and lookup implemented.
 	- hash table remove.
+	- unit tests for hash internal bin, lru functions.
 
 13 March 2007: Wouter
 	- lock_unprotect in checklocks.
